html-css: update 1st class texts and styles

--- a/HTML+CSS/aula1/html/index.html
+++ b/HTML+CSS/aula1/html/index.html
@@ -169,7 +169,7 @@
 				</section>
 
 				<section data-background="images/lets-practice.gif">
-					<h1 style="color: white; margin-top: 350px">Vamos praticar!</h1>
+					<h1 style="color: white; margin-top: 350px; text-shadow: 2px 2px 2px black">Vamos praticar!</h1>
 				</section>
 
 			</div>
