--- a/HTML+CSS/aula1/css/index.html
+++ b/HTML+CSS/aula1/css/index.html
@@ -35,46 +35,44 @@
 
 				<section>
 					<h2>Inserindo CSS na sua página</h2>
-					<p>Há três métodos para vincular documentos HTML ao CSS:</p>
+					<p>Há três métodos para vincular<br>documentos HTML ao CSS</p>
 				</section>
 
 				<section>
 					<h2>Externo</h2>
-					<pre>
-						<code class="html text-center large" data-trim>
-							<link rel="stylesheet" href="arquivoCSS.css">
-						</code>
-					</pre>
-				</section>
-
-				<section>
-					<h2>Onde coloco esse link?</h2>
+					<p>Este método importa um arquivo externo com as regras de CSS</p>
 					<pre>
 						<code class="html large" data-trim>
 							&#60;head&#62;
-							  <link rel="stylesheet" href="arquivoCSS.css">
+							  <link rel="stylesheet" href="estilos.css">
 							&#60;/head&#62;
 						</code>
 					</pre>
 				</section>
 
-
 				<section>
 					<h2>Interno</h2>
+					<p>Este método insere estilos através da tag <b>style</b> dentro do próprio html</p>
 					<pre>
-						<code class="html text-center large" data-trim>
-							<style></style>
+						<code class="html large" data-trim>
+							&#60;head&#62;
+							  <style>
+							    /* aqui vem as regras de CSS */
+							  </style>
+							&#60;/head&#62;
 						</code>
 					</pre>
 				</section>
 
 				<section>
 					<h2>Em linha</h2>
+					<p>Este método insere estilos diretamente na tag HTML</p>
 					<pre class="large">
 						<code class="html text-center large" data-trim>
 							<p style="color: red;"></p>
 						</code>
 					</pre>
+					<b>Atenção:</b> Isso não é uma boa prática!
 				</section>
 
 				<section>
@@ -88,16 +86,49 @@
 						</code>
 					</pre>
 				</section>
-				<!-- IDEA: inserir os tipos de seletores: id e tag -->
+
 				<section>
 					<h2>Regras de CSS</h2>
-					<p>Exemplo</p>
+					<p>Estilizando tags</p>
+					<pre>
+						<code class="css large" data-trim>
+							p {
+							  color: red;
+							}
+						</code>
+					</pre>
+				</section>
+
+				<section>
+					<h2>Regras de CSS</h2>
+					<p>Estilizando classes</p>
+					<pre>
+						<code class="css large" data-trim>
+							.nomeDaMinhaClasse {
+							  color: red;
+							}
+						</code>
+					</pre>					
+				</section>
+
+				<section>
+					<h2>Regras de CSS</h2>
+					<p>Seguindo o exemplo anterior, sua tag HTML precisa fazer referência a sua classe CSS, dessa forma:</p>
+					<pre>
+						<code class="html large" data-trim>
+							<p class="nomeDaMinhaClasse">Texto</p>
+						</code>
+					</pre>
+				</section>
+
+				<section>
+					<h2>Regras de CSS</h2>
+					<p>Neste exemplo estamos alterando os estilos da tag <b>body</b>, ou seja, alteramos a cor de fundo e o estilo de fonte da página inteira</p>
 					<pre>
 						<code class="css large" data-trim>
 							body {
 							  background-color: #00ff00;
-							  font-family: sans-serif;
-							  text-align: center;
+							  font-family: arial, sans-serif;
 							}
 						</code>
 					</pre>
@@ -125,12 +156,9 @@
 						}
 						</code>
 					</pre>
-					<h6 >Outros valores</h6>
-					<ul>
-						<li>10em</li>
-						<li>20pt</li>
-						<li>5cm</li>
-					</ul>
+					<p>
+						<b>Outros valores:</b> 10em, 20pt
+					</p>
 				</section>
 
 				<section>
@@ -138,17 +166,14 @@
 					<p>Tipografia</p>
 					<pre class="mb-0">
 						<code class="css large" data-trim>
-							.fonteLarga {
+							.negrito {
 							  font-weight: bolder;
 							}
 						</code>
 					</pre>
-					<h6>Outros valores</h6>
-					<ul>
-						<li>Lighter</li>
-						<li>Normal</li>
-						<li>100 a 900</li>
-					</ul>
+					<p>
+						<b>Outros valores:</b> lighter, normal, 100 até 900
+					</p>
 				</section>
 
 				<section>
@@ -156,16 +181,14 @@
 					<p>Tipografia</p>
 					<pre>
 						<code class="css large" data-trim>
-						 .fonteItalic {
+						 .italico {
 				  	   font-style: italic;
 							}
 						</code>
 					</pre>
-					<h6>Outros valores</h6>
-					<ul>
-						<li>Normal</li>
-						<li>Oblique</li>
-					</ul>
+					<p>
+						<b>Outros valores:</b> normal, oblique
+					</p>
 				</section>
 
 				<section>
@@ -173,17 +196,14 @@
 					<p>Tipografia</p>
 					<pre class="mb-0">
 						<code class="css large" data-trim>
-						 div {
-				  	   text-align: left;
+						  p {
+				  	    text-align: left;
 							}
 						</code>
 					</pre>
-					<h6>Outros valores</h6>
-					<ul>
-						<li>Justify</li>
-						<li>Center</li>
-						<li>Right</li>
-					</ul>
+					<p>
+						<b>Outros valores:</b> justify, center, right
+					</p>
 				</section>
 
 				<section>
@@ -191,17 +211,14 @@
 					<p>Tipografia</p>
 					<pre class="mb-0">
 						<code class="css large" data-trim>
-						 a {
-				  	   text-decoration: none;
+						  a {
+				  	    text-decoration: none;
 							}
 						</code>
 					</pre>
-					<h6>Outros valores</h6>
-					<ul>
-						<li>Underline</li>
-						<li>Overline</li>
-						<li>Line-through</li>
-					</ul>
+					<p>
+						<b>Outros valores:</b> underline, overline, line-through
+					</p>
 				</section>
 
 				<section>
@@ -214,16 +231,13 @@
 							}
 						</code>
 					</pre>
-					<h6 >Outros valores</h6>
-					<ul>
-						<li>10em</li>
-						<li>20pt</li>
-						<li>5cm</li>
-					</ul>
+					<p>
+						<b>Outros valores:</b> 10em, 20pt
+					</p>
 				</section>
 
 				<section data-background="https://media.giphy.com/media/fQZX2aoRC1Tqw/giphy.gif">
-					<h1 style="color: white; margin-top: 350px">Vamos praticar!</h1>
+					<h1 style="color: white; margin-top: 350px; text-shadow: 2px 2px 2px black">Vamos praticar!</h1>
 				</section>
 
 				<section data-background="images/thanks-1.gif"></section>
