update the exercise css

--- a/HTML+CSS/aula1/exercicios.html
+++ b/HTML+CSS/aula1/exercicios.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
   <style>
-    body { padding-bottom: 50px; }
-    li { margin-bottom: 20px; }
+    body { padding-bottom: 50px; font-size: 16px;}
+    .main-li { margin-bottom: 20px; }
   </style>
 </head>
 <body>
@@ -34,11 +34,11 @@
         </h2>
       </div>
       <ol>
-        <li>
+        <li class="main-li">
           Criar a estrutura básica de um documento HTML<br>
           <small><strong>Lembrete:</strong> html, head, title, body</small>
         </li>
-        <li>
+        <li class="main-li">
           Coloque o seu nome na tag <i>title</i><br>
           <small><b>Exemplo:</b> Maria da Rosa | Desenvolvedora Web Fullstack</small>
         </li>
@@ -47,19 +47,19 @@
         Salve o arquivo como <b>index.html</b> e abra no navegador. Verifique se o seu nome aparece na barra do navegador.
       </div>
       <ol start="3">
-        <li>
+        <li class="main-li">
           Agora adicione o título principal, também contendo seu nome igual no <i>title</i>.<br>
           <small><b>Lembrete:</b> Temos uma tag específica para o título principal da página</small>
         </li>
-        <li>
+        <li class="main-li">
           Agora crie uma área <b>"Perfil"</b> que deverá ter uma breve descrição do seu perfil profissional.<br>
           <small><b>Dica:</b> Você pode usar uma tag de subtítulo e outra de parágrafo</small>
         </li>
-        <li>
+        <li class="main-li">
           Crie outra seção com o título <b>"Habilidades"</b> que deverá exibir: html, css, javascript, php, laravel, mysql. <br>
           <small><b>Dica:</b> Use alguma tag de lista</small>
         </li>
-        <li>
+        <li class="main-li">
           Crie outra seção para <b>"Experiência profissional"</b> que deverá exibir pelo menos 3 experiências contendo: nome da empresa, cargo e descrição. <br>
         </li>
       </ol>
@@ -76,32 +76,32 @@
         </h2>
       </div>
       <ol>
-        <li>
+        <li class="main-li">
           Importe o arquivo criado na sua página. <br>
           <small><b>Lembrete:</b> Utilize a tag <i>link</i> no <i>head</i> da página</small>
         </li>
-        <li>
+        <li class="main-li">
           Crie uma regra para mudar a cor de fundo da sua página para cinza. <br>
         </li>
-        <li>
+        <li class="main-li">
           Troque toda a tipografia da página para <b>sans-serif</b>. <br>
           <small><b>Dica: </b>Aproveite a regra feita no exercício anterior.</small>
         </li>
-        <li>
+        <li class="main-li">
           Troque a cor dos títulos e subtítulos para qualquer outra cor de sua escolha. <br>
           <small><b>Dica: </b>Você pode pegar as referências de cores <a href="https://www.materialpalette.com/colors" target="blank">neste site</a>.</small>
         </li>
-        <li>
+        <li class="main-li">
           Troque a cor dos parágrafos para qualquer outra cor de sua escolha.
         </li>
-        <li>
+        <li class="main-li">
           Centralize o título principal e aplique um estilo itálico.
         </li>
-        <li>
+        <li class="main-li">
           Por padrão, todos os títulos e subtítulos são negrito. Remova o negrito apenas dos subtítulos.
         </li>
-        <li>
-          Alinhar todos os parágrafos de modo <b>justificado</b>, com um tamanho de fonte de <b>14px</b> e um espaçamento entre linhas de <b>16px</b>.          
+        <li class="main-li">
+          Alinhar todos os parágrafos de modo <b>justificado</b>, com um tamanho de fonte de <b>14px</b> e um espaçamento entre linhas de <b>16px</b>.
         </li>
       </ol>
       <div class="alert alert-success" role="alert">
