images: move folder

--- a/HTML+CSS/aula1/css/index.html
+++ b/HTML+CSS/aula1/css/index.html
@@ -7,8 +7,8 @@
 		<link rel="stylesheet" href="../../../assets/css/main.css">
 	</head>
 	<body class="css-top-border">
-		<img src="images/dh-logo.png" alt="Digital House" class="digitalhouse-logo">
-		<img src="images/css3-logo.png" alt="CSS3" class="module-logo">
+		<img src="../../../assets/images/dh-logo.png" alt="Digital House" class="digitalhouse-logo">
+		<img src="../../../assets/images/css3-logo.png" alt="CSS3" class="module-logo">
 
 		<div class="reveal">
 			<div class="slides">
@@ -21,7 +21,7 @@
 				</section>
 
 				<section>
-					<img src="images/lego.gif" width="900" style="border: none; box-shadow: none;">
+					<img src="../../../assets/images/lego.gif" width="900" style="border: none; box-shadow: none;">
 				</section>
 
 				<section>
@@ -237,7 +237,7 @@
 					<h1 style="color: white; margin-top: 350px; text-shadow: 2px 2px 2px black">Vamos praticar!</h1>
 				</section>
 
-				<section data-background="images/thanks-1.gif"></section>
+				<section data-background="../../../assets/images/thanks-1.gif"></section>
 			</div>
 		</div>
 
