--- a/HTML+CSS/aula1/html/index.html
+++ b/HTML+CSS/aula1/html/index.html
@@ -17,16 +17,16 @@
 		</style>
 	</head>
 	<body class="html-top-border">
-		<img src="images/dh-logo.png" alt="Digital House" class="digitalhouse-logo">
-		<img src="images/html5-logo.png" alt="HTML5" class="module-logo">
+		<img src="../../../assets/images/dh-logo.png" alt="Digital House" class="digitalhouse-logo">
+		<img src="../../../assets/images/html5-logo.png" alt="HTML5" class="module-logo">
 
 		<a href="../css/#/" id="cssLink">
-			<img src="images/css-btn.png" alt="CSS Botão" width="100">
+			<img src="../../../assets/images/css-btn.png" alt="CSS Botão" width="100">
 		</a>
 
 		<div class="reveal">
 			<div class="slides">
-				<section data-background-image="images/html5.jpg">
+				<section data-background-image="../../../assets/images/html5.jpg">
 				</section>
 
 				<section>
@@ -103,7 +103,7 @@
 				</section>
 
 				<section>
-					<img src="images/alert-icon.png" style="border: none; box-shadow: none; width: 200px">
+					<img src="../../../assets/images/alert-icon.png" style="border: none; box-shadow: none; width: 200px">
 					<p><strong>Atenção</strong></p>
 					<p>Seu site deve conter apenas um<br>elemento <strong>&lt;h1&gt;</strong> por página ou <strong>&lt;section&gt;</strong>!</p>
 				</section>
@@ -175,7 +175,7 @@
 					</pre>
 				</section>
 
-				<section data-background="images/lets-practice.gif">
+				<section data-background="../../../assets/images/lets-practice.gif">
 					<h1 style="color: white; margin-top: 350px; text-shadow: 2px 2px 2px black">Vamos praticar!</h1>
 				</section>
 
