add exercises class 2

--- a/HTML+CSS/aula2/exercicios.html
+++ b/HTML+CSS/aula2/exercicios.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>Exercícios - Aula 01 - HTML + CSS</title>
+  <title>Exercícios - Aula 02 - HTML + CSS</title>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
@@ -50,22 +50,25 @@
         </li>
         <li class="main-li">
           Crie um link de e-mail que permita "enviar" um e-mail ao seu endereço de e-mail pessoal com o assunto <b>"Mensagem do site"</b>.<br>
-          <small><b>Dica:</b> para escolher o assunto do email basta usar <i>?subject=feedback</i> após o endereço de e-mail </small>
+          <small><b>Dica:</b> para escolher o assunto do email basta usar <b>?subject=feedback</b> após o endereço de e-mail </small>
         </li>
         <li class="main-li">
-          Agora crie uma área <b>"Perfil"</b> que deverá ter uma breve descrição do seu perfil profissional.<br>
-          <small><b>Dica:</b> Você pode usar uma tag de subtítulo e outra de parágrafo</small>
+          Crie um link interno (âncora) que permita ir até a sessão <b>"Experiência Profissional"</b><br>
+          <small><b>Exemplo:</b> "Ver Experiência Profissional".</small><br>
+          <small><b>Dica:</b> Se seu site estiver sem barra de rolagem então crie textos para que seu site tenha barra de rolagem, você pode usar esse <a href="https://br.lipsum.com/">Gerador de textos</a>.</small>
         </li>
         <li class="main-li">
-          Crie outra seção com o título <b>"Habilidades"</b> que deverá exibir: html, css, javascript, php, laravel, mysql. <br>
-          <small><b>Dica:</b> Use alguma tag de lista</small>
-        </li>
-        <li class="main-li">
-          Crie outra seção para <b>"Experiência profissional"</b> que deverá exibir pelo menos 3 experiências contendo: nome da empresa, cargo e descrição. <br>
+          Levando em conta o <b>item b</b>:
+          <ul>
+            <li>Crie um novo documento HTML chamado <b>hobbies.html</b> e salvá-lo na mesma pasta que o arquivo <b>index.html</b>.</li>
+            <li>Crie um título principal para o hobbies.html chamado <b>"Meus Passatempos"</b></li>
+            <li>Vincule o arquivo CSS que você já tem criado com o hobbies.html</li>
+            <li>Crie um link local para ir do arquivo hobbies.html até o arquivo index.html</li>
+          </ul>
         </li>
       </ol>
       <div class="alert alert-success" role="alert">
-        Muito bem! <a href="#" data-toggle="modal" data-target="#exemploHTML">Clique aqui</a> para ver um exemplo de como sua página deve ficar!
+        Muito bem! <a href="#" data-toggle="modal" data-target="#exemploHTML">Clique aqui</a> para ver um exemplo de como sua página hobbies deve ficar!
       </div>
     </section>
 
@@ -139,7 +142,7 @@
           <h4 class="modal-title" id="myModalLabel">Exemplo</h4>
         </div>
         <div class="modal-body">
-          <img src="html/images/exemplo-exercicio.png" alt="Exemplo" width="100%">
+          <img src="../../../assets/images/exemplo-exercicio-2.png" alt="Exemplo" width="100%">
         </div>
       </div>
     </div>
