--- a/HTML+CSS/aula2/css/index.html
+++ b/HTML+CSS/aula2/css/index.html
@@ -64,7 +64,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>outros valores:</strong> no-repeat, repeat-x, repeat-y</span>
+					<span><strong>Outros valores:</strong> no-repeat, repeat-x, repeat-y</span>
 				</section>
 
 				<section>
@@ -76,7 +76,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>outros valores:</strong> left, right, bottom, center</span><br>
+					<span><strong>Outros valores:</strong> left, right, bottom, center</span><br>
 				</section>
 
 				<section>
@@ -88,7 +88,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>outros valores:</strong> fixed </span><br>
+					<span><strong>Outros valores:</strong> fixed </span><br>
 				</section>
 
 				<section>
@@ -100,7 +100,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>outros valores:</strong> rgb(0,0,0), rga(0,0,0,0.5) </span><br>
+					<span><strong>Outros valores:</strong> rgb(0,0,0), rga(0,0,0,0.5) </span><br>
 				</section>
 
 				<section>
@@ -112,7 +112,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>outros valores:</strong> contain,length </span><br>
+					<span><strong>Outros valores:</strong> contain,length </span><br>
 				</section>
 
 				<section data-background="https://media.giphy.com/media/fQZX2aoRC1Tqw/giphy.gif">
