--- a/HTML+CSS/aula2/css/index.html
+++ b/HTML+CSS/aula2/css/index.html
@@ -10,6 +10,10 @@
 		<img src="../../../assets/images/dh-logo.png" alt="Digital House" class="digitalhouse-logo">
 		<img src="../../../assets/images/css3-logo.png" alt="CSS3" class="module-logo">
 
+		<a href="../exercicios.html#ex-2" class="exercise" id="exerciseLink">
+			<img src="../../../assets/images/exercise-1.jpg" class="zoom radius-100" alt="Cérebro malhando" width="100" height="100">
+		</a>
+
 		<div class="reveal">
 			<div class="slides">
 				<section data-background-image="../../../assets/images/css3.jpg">
@@ -116,8 +120,7 @@
 					<span><strong>Outros valores:</strong> contain,length </span><br>
 				</section>
 
-				<section data-background="https://media.giphy.com/media/fQZX2aoRC1Tqw/giphy.gif">
-					<a href="../exercicios.html#ex-3"><img src="../../../assets/images/exercise-1.jpg" class="zoom radius-100 exercise" alt="Cérebro malhando"></a>
+				<section data-background="../../../assets/images/lets-practice.gif">
 					<h1 class="shadow" style="color: white; margin-top: 350px">Vamos praticar!</h1>
 				</section>
 
@@ -131,10 +134,10 @@
 
 		<script>
 			Reveal.addEventListener('slidechanged', function (event) {
-				if (Reveal.isLastSlide()) {
-					cssLink.style.display = 'block'
+				if (Reveal.getIndices().h === Reveal.getTotalSlides() - 2) {
+					exerciseLink.style.display = 'block'
 				} else {
-					cssLink.style.display = 'none'
+					exerciseLink.style.display = 'none'
 				}
 			})
 		</script>
