--- a/HTML+CSS/aula4/css/index.html
+++ b/HTML+CSS/aula4/css/index.html
@@ -5,14 +5,20 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 		<title>Aula 2 - CSS</title>
 		<link rel="stylesheet" href="../../../assets/css/main.css">
+		<style>
+			#cssLink {
+				position: absolute;
+				top: 15px;
+				right: 35px;
+				width: 80px;
+				z-index: 10;
+				display: none;
+			}
+		</style>
 	</head>
 	<body class="css-top-border">
 		<img src="../../../assets/images/dh-logo.png" alt="Digital House" class="digitalhouse-logo">
 		<img src="../../../assets/images/css3-logo.png" alt="CSS3" class="module-logo">
-
-		<a href="../exercicios.html#ex-2" class="exercise" id="exerciseLink">
-			<img src="../../../assets/images/exercise-1.jpg" class="zoom radius-100" alt="Cérebro malhando" width="100" height="100">
-		</a>
 
 		<div class="reveal">
 			<div class="slides">
@@ -69,7 +75,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>Outros valores:</strong> no-repeat, repeat-x, repeat-y</span>
+					<span><strong>outros valores:</strong> no-repeat, repeat-x, repeat-y</span>
 				</section>
 
 				<section>
@@ -81,7 +87,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>Outros valores:</strong> left, right, bottom, center</span><br>
+					<span><strong>outros valores:</strong> left, right, bottom, center</span><br>
 				</section>
 
 				<section>
@@ -93,7 +99,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>Outros valores:</strong> fixed </span><br>
+					<span><strong>outros valores:</strong> fixed </span><br>
 				</section>
 
 				<section>
@@ -105,7 +111,7 @@
 							}
 						</code>
 					</pre>
-					<span><strong>Outros valores:</strong> rgb(0,0,0), rga(0,0,0,0.5) </span><br>
+					<span><strong>outros valores:</strong> rgb(0,0,0), rga(0,0,0,0.5) </span><br>
 				</section>
 
 				<section>
@@ -117,10 +123,11 @@
 							}
 						</code>
 					</pre>
-					<span><strong>Outros valores:</strong> contain,length </span><br>
+					<span><strong>outros valores:</strong> contain,length </span><br>
 				</section>
 
-				<section data-background="../../../assets/images/lets-practice.gif">
+				<section data-background="https://media.giphy.com/media/fQZX2aoRC1Tqw/giphy.gif">
+					<a href="../exercicios.html#ex-3"><img src="../../../assets/images/exercise-1.jpg" class="zoom radius-100 exercise" alt="Cérebro malhando"></a>
 					<h1 class="shadow" style="color: white; margin-top: 350px">Vamos praticar!</h1>
 				</section>
 
@@ -134,10 +141,10 @@
 
 		<script>
 			Reveal.addEventListener('slidechanged', function (event) {
-				if (Reveal.getIndices().h === Reveal.getTotalSlides() - 2) {
-					exerciseLink.style.display = 'block'
+				if (Reveal.isLastSlide()) {
+					cssLink.style.display = 'block'
 				} else {
-					exerciseLink.style.display = 'none'
+					cssLink.style.display = 'none'
 				}
 			})
 		</script>
