--- a/HTML+CSS/aula4/html/index.html
+++ b/HTML+CSS/aula4/html/index.html
@@ -3,25 +3,19 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<title>Aula 2 - HTML</title>
+		<title>Aula 4 - HTML</title>
 		<link rel="stylesheet" href="../../../assets/css/main.css">
-		<style>
-			#cssLink {
-				position: absolute;
-				top: 15px;
-				right: 35px;
-				width: 80px;
-				z-index: 10;
-				display: none;
-			}
-		</style>
 	</head>
 	<body class="html-top-border">
 		<img src="../../../assets/images/dh-logo.png" alt="Digital House" class="digitalhouse-logo">
 		<img src="../../../assets/images/html5-logo.png" alt="HTML5" class="module-logo">
 
-		<a href="../css/#/" class="css-link" id="cssLink">
-			<img src="../../../assets/images/css3.jpg" class="zoom radius-100" alt="CSS Botão" width="100" height="100">
+		<a href="../css/#/" class="zoom radius-100" id="cssLink">
+			<img src="../../../assets/images/css3-logo.png" alt="CSS Botão">
+		</a>
+
+		<a href="../exercicios.html#ex-2" class="exercise" id="exerciseLink">
+			<img src="../../../assets/images/exercise-1.jpg" class="zoom radius-100" alt="Cérebro malhando" width="100" height="100">
 		</a>
 
 		<div class="reveal">
@@ -35,178 +29,79 @@
 
 				<section>
 					<h2>Section</h2>
-					<p>Representa uma parte do layout e agrupa o conteúdo</p>
+					<p>Representa uma parte da aplicação e agrupa o conteúdo da página.</p>
+          <pre>
+            <code class="html text-center large" data-trim>
+              &lt;section&gt;&lt;/section&gt;
+            </code>
+          </pre>
 				</section>
 
 				<section>
 					<h2>Article</h2>
+          <p>Representa as informações dentro de uma seção.</p>
+          <pre>
+            <code class="html text-center large" data-trim>
+              <article></article>
+            </code>
+          </pre>
+				</section>
+
+        <section>
+					<h2>Header</h2>
+          <p>Cabeçalho de um conteúdo ou da aplicação</p>
+          <pre>
+            <code class="html text-center large" data-trim>
+              <header></header>
+            </code>
+          </pre>
+				</section>
+
+        <section>
+					<h2>Footer</h2>
+          <p>Rodapé de um conteúdo ou da aplicação</p>
+          <pre>
+            <code class="html text-center large" data-trim>
+              <footer></footer>
+            </code>
+          </pre>
+				</section>
+
+
+				<section>
+					<h2 class="html-color">Seções não semânticas</h2>
 				</section>
 
 				<section>
-					<h2>CSS</h2>
-					<p>
-						CSS é uma linguagem composta por regras de estilo com a finalidade de “estilizar” as tags html.
-					</p>
+					<h2>Div</h2>
+          <p>Representa uma parte da aplicação é usada para estilização</p>
+          <pre>
+            <code class="html text-center large" data-trim>
+              <div></div>
+            </code>
+          </pre>
 				</section>
 
-				<section>
-					<h3>Algumas propriedades que já vimos:</h3>
-					<pre>
-						<code class="css text-center large" data-trim>
-							font-family: arial, sans-serif;
-							font-style: italic;
-							font-size: 15px;
-							text-align: center;
-						</code>
-					</pre>
+      	<section>
+					<h2>Span</h2>
+          <p>É uma tag multifuncional, normalmente usada para agrupar elementos em linha</p>
+          <pre>
+            <code class="html text-center large" data-trim>
+              <span></span>
+            </code>
+          </pre>
 				</section>
 
-				<section data-background="../../../assets/images/what-else.gif"></section>
+        <section data-background="../../../assets/images/lets-practice.gif">
+          <h1 class="shadow" style="color: white; margin-top: 350px">Vamos praticar!</h1>
+        </section>
 
-				<section id="fragments">
-					<h2 class="html-color">Introdução a caminhos</h2>
-				</section>
-
-				<section>
-					<h3>Vamos definir!</h3>
-					<p>Os <strong>links</strong> de internet são formados por uma série de caminhos. O caminho indica o <strong>endereço</strong> até onde o navegador deve ir quando o usuário clica em um link.</p>
-				</section>
-
-				<section>
-					<h2>Tipos de caminho</h2>
-					<p>Existem dois tipos de caminhos:</p>
-					<table class="border">
-					  <thead>
-					    <tr>
-					      <th class="b-right">Absoluto</th>
-					      <th>Relativo</th>
-					    </tr>
-					  </thead>
-					  <tbody>
-					    <tr>
-					      <td class="b-right">https://digitalhouse.com</td>
-					      <td>../images/teaser.jpg</td>
-					    </tr>
-					  </tbody>
-					</table>
-				</section>
-
-				<section>
-					<h2>Links</h2>
-					<p>A tag <strong>&lt;a&gt;</strong> é usada para definir o destino de um link.</p>
-					<pre>
-						<code class="html text-center large" data-trim>
-							<a href="CaminhoDestino"></a>
-						</code>
-					</pre>
-					<strong>Vamos ver alguns deles?</strong>
-				</section>
-
-				<section>
-					<h2>Externo</h2>
-					<pre>
-						<code class="html text-center" data-trim>
-							<a href="http://google.com">Ir para o Google</a>
-						</code>
-					</pre>
-				</section>
-
-				<section>
-					<h2>Local</h2>
-					<pre>
-						<code class="html text-center" data-trim>
-							<a href="contato.html">Fale conosco</a>
-						</code>
-					</pre>
-				</section>
-
-				<section>
-					<h2>Interno (âncora)</h2>
-					<pre>
-						<code class="html text-center" data-trim>
-							<a href="#bio"> Biografia</a>
-						</code>
-					</pre>
-				</section>
-
-				<section>
-					<h2>E-mail</h2>
-					<pre>
-						<code class="html text-center" data-trim>
-							<a href="mailto:user@server.com">Fale comigo agora!</a>
-						</code>
-					</pre>
-				</section>
-
-				<section>
-					<h2>Telefone</h2>
-					<pre>
-						<code class="html text-center" data-trim>
-							<a href="tel:1145678900"> Ligue já!</a>
-						</code>
-					</pre>
-				</section>
-
+				
 				<section data-background="../../../assets/images/lets-practice.gif">
-					<a href="../exercicios.html#ex-2"><img src="../../../assets/images/exercise-1.jpg" class="zoom radius-100 exercise" alt="Cérebro malhando"></a>
 					<h1 class="shadow" style="color: white; margin-top: 350px">Vamos praticar!</h1>
 				</section>
 
-				<section>
-					<h2>Tag de imagem</h2>
-					<pre>
-						<code class="html text-center large" data-trim>
-							<img src="" alt="" width="" height="">
-						</code>
-					</pre>
-					<ul>
-						<li>
-							src = caminho / origem da imagem
-						</li>
-						<li>
-							alt = descrição da imagem / SEO
-						</li>
-						<li>
-							width = largura / não obrigatório
-						</li>
-						<li>
-							height = altura / não obrigatório
-						</li>
-					</ul>
-				</section>
-
-				<section>
-					<h2>Tag de vídeo</h2>
-					<pre class="m-b-0">
-						<code class="hmtl large" data-trim>
-							&lt;video width="" poster="image.jpg" autoplay&gt;
-						   <source src="video.mp4" type="video/mp4">
-						   <source src="video.ogg" type="video/ogg">
-						   <source src="video.webm" type="video/webm">
-						   <p>Seu navegador não suporta vídeo HTML5</p>
-							&lt;/video&gt;
-						</code>
-					</pre>
-					<p><b>Outros atributos:</b> controls, autoplay, loop, poster</p>
-				</section>
-
-				<section>
-					<h2>Tag de áudio</h2>
-					<pre>
-						<code class="html large" data-trim>
-							&lt;audio width="" controls&gt;
-						   <source src="audio.mp3" type="audio/mp3">
-						   <source src="audio.wav" type="audio/x-wav">
-						   <source src="audio.ogg" type="audio/ogg-">
-						   <p>Seu navegador não suporta áudio HTML5</p>
-						 &lt;/audio&gt;
-						</code>
-					</pre>
-					<p><b>Outros atributos:</b> controls, autoplay, loop e muted</p>
-				</section>
-
 				<section data-background="../../../assets/images/lets-practice.gif">
-					<a href="../exercicios.html#ex-2"><img src="../../../assets/images/exercise-1.jpg" class="zoom radius-100 exercise" alt="Cérebro malhando"></a>
 					<h1 class="shadow" style="color: white; margin-top: 350px;">Vamos praticar!</h1>
 				</section>
 
@@ -221,8 +116,10 @@
 			Reveal.addEventListener('slidechanged', function (event) {
 				if (Reveal.isLastSlide()) {
 					cssLink.style.display = 'block'
+					exerciseLink.style.display = 'block'
 				} else {
 					cssLink.style.display = 'none'
+					exerciseLink.style.display = 'none'
 				}
 			})
 		</script>
